# glider_hybrid_whoi

glider_cva_localization/: CMakeLists.txt  package.xml
glider_cva_localization/launch/: Localizer.launch
glider_cva_localization/modules/: module_to_import.py
glider_cva_localization/modules/core/CC/: CC.py  __init__.py
glider_cva_localization/modules/core/TDOA/: TDOA.py  __init__.py
glider_cva_localization/scripts/: Localizer.py  plotDataLive.py  test
glider_deadreckoning/nodes/: deadreckoning_estimator.py
glider_hybrid_whoi_control/rviz/: glider_hybrid_whoi_control.rviz
glider_hybrid_whoi_description/launch/: upload_glider_hybrid_whoi_kinematics.launch
glider_hybrid_whoi_description/robots/: glider_hybrid_whoi_default_kinematics.urdf.xacro
glider_hybrid_whoi_description/urdf/: glider_hybrid_whoi_sensors_kinematics.xacro  glider_slocum_base_kinematics_slocum.xacro  uw_hector_imu_plugin.xacro
glider_hybrid_whoi_gazebo/launch/: start_demo_kinematics_stratified_current.launch  start_demo_kinematics_stratified_current_with_asv.launch
glider_hybrid_whoi_gazebo/worlds/: seafloor_underwater_stratified_current.world
kinematics_ros_plugins/IMAGES/: state.csv
kinematics_ros_plugins/scripts/: ascend.py  dive.py  plotData.py  plotDataLive.py  tempCodeRunnerFile.py  test_directKinematics.py  yoyo.py
