<?xml version="1.0"?>
<package format="2">
  <name>glider_cva_localization</name>
  <version>0.0.0</version>
  <description>
    Compact Volumetric Array Localization for Slocum Glider
  </description>

  <maintainer email="mc309397@dal.ca">Michael MacGillivray</maintainer>
  <author email="mc309397@dal.ca">Michael MacGillivray</author>

  <license>TODO</license>

  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
